Bugfix for collapsing datepicker and select box.

--- a/src/styles/tink/_datepicker.scss
+++ b/src/styles/tink/_datepicker.scss
@@ -15,6 +15,9 @@
   }
 
   .faux-input {
+// bugfix so the input field won't collapse when it's used in a absolute container.
+// min-width preferred over padding (size changes when content changes). (LVG)
+    min-width: rem(120);
     position: relative;
 
     &:focus {
